Implementación de la capa de persistencia